--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<header>bienvenidos
+    <ul> <a href="imagenes/descarga.jpg" target="_blank"><li>opcion 1</li></a>
+    <a href="imagenes/images (1).jpg" target="_blank"> <li>opcion 2</li></a>
+    </ul>
+</header>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +13,15 @@
 
 <body>
 
-    <p>hola mundo</p>
-    <p>ok</p>
+    <h1>hola inversores</h1>
+    <h2>siguiendo la clase</h2>
+    <p>estoy en eso </p>
+    <ul>
+       <a href="paginas/contacto.html" target="_blank"><li>contacto</li></a>
+        <a href="paginas/historia.html"><li> segunda lista</li></a>
+    </ul>
 
+    
 </body>
 </html>
+<footer>celular instagram facebook</footer>
